--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.6",
-    "yup": "^1.0.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
